# asdc

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  appbuildinfo.h  buildinfo.h.in  core.cpp  core.h  main.cpp
src/assets/: assets.qrc
src/db/: client.cpp  client.h  sqlquerymodel.h
src/net/: bytebuffer.cpp  bytebuffer.h  client.cpp  client.h  discovery.cpp  discovery.h  packet.cpp  packet.h
src/network/: bytebuffer.cpp  bytebuffer.h  client.cpp  client.h  packet.cpp  packet.h
src/proto/: Clock.proto  Command.proto  Configuration.proto  Error.proto  Filter.proto  Information.proto  Live.proto  Lpc.proto  MobileAuthenticate.proto  MobileAvailableSpas.proto  MobileSpaRegistration.proto  MobileWifiDetails.proto  OnzenLive.proto  OnzenSettings.proto  Peak.proto  Peripheral.proto  Router.proto  Settings.proto
src/qml/: AppStyle.qml  CMakeLists.txt  Main.qml
src/qml/assets/: assets.qrc  win32.rc
src/qml/components/: AboutDialog.qml  CMakeLists.txt  DeviceStatusDisplay.qml  FeatureControls.qml  LoadingDialog.qml  MessageViewer.qml  SensorReadingsDisplay.qml  TemperatureControls.qml  TemperatureDial.qml
src/qml/pages/: CMakeLists.txt  DashboardPage.qml  MainPage.qml  MessageViewerPage.qml  SettingsPage.qml  SqlBrowserPage.qml  StartupPage.qml  ToolsPage.qml
